# agente-livekit

./: Dockerfile  README.md  api_server.py  config.json  index.html  livekit.toml  main.py  pyproject.toml  requirements.txt  run_agent.py  setup.sh
